--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ author:
   avatar           : "20250801_184707.jpg"
   name             : "Markos Giannopoulos"
   pronouns         : # example: "she/her"  
-  bio              : "PhD Student in Statistics and Computer Science"
+  bio              : "PhD Student in Computer Science"
   location         : "Milan, Italy"
   employer         : "Bocconi University"
   uri              : # URL
